<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grobot_navigation2</name>
  <version>0.0.1</version>
  <description>
    ROS 2 launch scripts for navigation2
  </description> 
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/omorobot/omo_r1-foxy</url>
  <maintainer email="kyuhyong@gmail.com">Kyuhyong You</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>libzmq3-dev</depend>
  <depend>ament_index_cpp</depend>  
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>Eigen3</depend>
  <depend>yaml-cpp</depend>
  <!-- <depend>ament_index_cpp</depend> -->


  
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
